# ticketmaster-system-design

./: README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0c3bac4dd7a4_create_seatchart_table.py  5b1792f6f3cf_add_cols_to_events.py  68e00a8c650e_create_all_entities.py
api/: event.py  user.py
